# ClinicalTrials

./: .env  .gitignore  README.md  index.html  package.json  package.json.bak  tailwind.config.cjs  tsconfig.json
prisma/: schema.prisma  schema.prisma.bak  trialtracker.db
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: FeedbackButton.tsx  FiltersPanel.tsx  InvestorBadge.tsx  ModeToggle.tsx  SearchBar.tsx  SyncStatusBanner.tsx  TrayIndicator.tsx  TrialCard.tsx  TutorialDialog.tsx  WatchlistButton.tsx
src/lib/: types.ts
src/providers/: theme-provider.tsx
src/state/: filter-store.ts  mode-store.ts
src/types/: react-virtualized-auto-sizer.d.ts
src/utils/: api.ts  sponsors.ts
src/views/: CalendarPage.tsx  DashboardPage.tsx  WatchlistPage.tsx
