[package]
name="trialtracker"
version="0.1.0"
edition="2021"

[dependencies]
tauri= {version="2.8.2",features= [] }
tauri-plugin-sql= {version="2.0.0",features= ["sqlite"] }
serde= {version="1.0",features= ["derive"] }
serde_json="1.0"
tokio= {version="1",features= ["full"] }
sqlx= {version="0.8",features= ["sqlite", "runtime-tokio-native-tls"] }

[build-dependencies]
tauri-build= {version="2.0.0",features= [] }
